fix: modal on mobile

--- a/src/components/modal.module.css
+++ b/src/components/modal.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 120vh;
+  min-height: 120vh;
   background-color: white;
   transition: all 0.2s;
 }
